[tool.poetry]
name = "uptime_checking"
version = "0.1.0"
description = ""
authors = ["Jas Palermo <jasmes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pythonping = "^1.1.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
